css/styles.css
body {
  background-color: #11111b;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 80vh;
  margin: 0;
  overflow-y: hidden;
  font-family: Arial, sans-serif;
}

.content {
  text-align: center;
  z-index: 1;
}

.name {
  font-size: 6rem;
  color: white;
  margin-bottom: 1px;
}

.handle {
  font-size: 3rem;
  color: white;
  opacity: 0.7;
}

.social-button {
  margin: 0 0.5rem;
  color: white;
  font-size: 2rem;
  transition:
    color 0.3s,
    text-shadow 0.3s;
  border-radius: 50%; /* Arredonda o botão */
  overflow: hidden; /* Esconde o excedente do ícone arredondado */
}

.social-button:hover {
  text-shadow: none; /* Remove o efeito de brilho ao passar o mouse */
}

.social-button i {
  padding: 10px; /* Espaçamento interno para garantir bordas arredondadas */
  background-color: rgba(255, 255, 255, 0.1); /* Fundo com transparência */
  border-radius: 50%; /* Arredonda o ícone */
  backdrop-filter: blur(8px); /* Adiciona o efeito de desfoque */
  transition: background-color 0.3s; /* Transição suave para o fundo desfocado */
}

.social-button:hover i {
  background-color: rgba(
    255,
    255,
    255,
    0.05
  ); /* Reduz a opacidade ao passar o mouse */
}

.quote-box {
  position: fixed;
  bottom: 2rem;
  left: 50%;
  transform: translateX(-50%);
  padding: 10px 20px;
  background-color: rgba(255, 255, 255, 0.1); /* Fundo com transparência */
  backdrop-filter: blur(8px); /* Efeito de desfoque */
  border-radius: 20px; /* Borda arredondada */
  text-align: center;
  font-size: 1.2rem;
}

.quote {
  margin: 0;
  color: white;
}

.video-background {
  position: fixed;
  top: 50%;
  left: 50%;
  width: 100vw;
  height: 100vh;
  transform: translate(-50%, -50%);
  overflow: hidden;
}

.video-background iframe {
  width: 177.78vh; /* 16:9 aspect ratio: 9/16 * 100vh * 100 */
  height: 100vh;
  min-width: 100vw;
  min-height: 56.25vw; /* 16:9 aspect ratio: 100vw * 9/16 */
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

